# kasonka

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/lib/: central_lib.rs  mod.rs  model_lib.rs  tui_lib.rs
