[package]
name = "kasonka"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
rodio = "0.17.1"
crossterm = "0.26.1"
souvlaki = "0.6.0"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.48.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
]